fixed spacing on ie6

--- a/main.css
+++ b/main.css
@@ -21,7 +21,8 @@ html, body
 	text-align: right;
 	bottom: 0;
 	right: 0;
-	margin: 48px;
+	margin: 0;
+	padding: 48px;
 
 }
 
@@ -33,7 +34,7 @@ html, body
 
 	/* text styling */
 	text-align: center;
-	margin: 48px;
+	margin: 0;
 }
 
 .gridrow
@@ -60,7 +61,8 @@ a:link, a:visited
 {
 	/* textboxes */
 	max-width: max-content;
-	margin: 48px;
+	margin: 0;
+	padding: 48px;
 }
 
 #name
